--- a/html/gaming.html
+++ b/html/gaming.html
@@ -4,21 +4,21 @@
     <meta charset="utf-8" />
     <title>GPCP</title>
     <meta name="Description" content="Content" />
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="../css/index.css" />
   </head>
   <body>
     <div id="wrapper">
       <div class="header">
         <a class="logo">GPCP Company</a>
         <div class="header-right">
-          <a class="active" href="index.html">Home</a>
+          <a class="active" href="../index.html">Home</a>
           <a href="/html/productions.html">Productions</a>
           <a href="/html/dev.html">Dev</a>
           <a href="/html/arts.html">Arts</a>
           <a href="/html/gaming.html">Gaming</a>
         </div>
       </div>
-      <div class="content">HOME</div>
+      <div class="content">GAMING</div>
     </div>
   </body>
 </html>
