Display selected page

--- a/html/dev.html
+++ b/html/dev.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>GPCP</title>
+    <title>GPCP Dev</title>
     <meta name="Description" content="Content" />
     <link rel="stylesheet" type="text/css" href="../css/index.css" />
   </head>
@@ -11,9 +11,9 @@
       <div class="header">
         <a class="logo">GPCP Company</a>
         <div class="header-right">
-          <a class="active" href="../index.html">Home</a>
+          <a href="../index.html">Home</a>
           <a href="/html/productions.html">Productions</a>
-          <a href="/html/dev.html">Dev</a>
+          <a class="active" href="/html/dev.html">Dev</a>
           <a href="/html/arts.html">Arts</a>
           <a href="/html/gaming.html">Gaming</a>
         </div>
