--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>GPCP</title>
+    <title>GPCP Company</title>
     <meta name="Description" content="Content" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
   </head>
