gaming page editing

--- a/html/gaming.html
+++ b/html/gaming.html
@@ -18,7 +18,13 @@
           <a class="active" href="/html/gaming.html">Gaming</a>
         </div>
       </div>
-      <div class="content">GAMING</div>
+      <div class="content">
+        <div class="discord">
+          <a href="https://discord.gg/YHyPV8WHPQ" target="_blank">Discord</a>
+        </div>
+      </div>
     </div>
+
+    <script src="../js/gaming.js"></script>
   </body>
 </html>
