--- a/html/gaming.html
+++ b/html/gaming.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>GPCP Gaming</title>
     <meta name="Description" content="Content" />
-    <link rel="stylesheet" type="text/css" href="../css/index.css" />
+    <link rel="stylesheet" type="text/css" href="../css/gaming.css" />
   </head>
   <body>
     <div id="wrapper">
