--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <a href="/html/gaming.html">Gaming</a>
         </div>
       </div>
-      <div class="content">HOME</div>
+      <div class="content">Test</div>
     </div>
   </body>
 </html>
